<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentAjustes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_nualia"
    android:padding="24dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/ajustes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textColor="@color/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCambiarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_nombre_usuario"
            android:backgroundTint="@color/botones"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            app:iconPadding="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCambiarIdioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_idioma"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/botones"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            app:iconPadding="8dp" />

    </LinearLayout>
</ScrollView>
